--- a/main.html
+++ b/main.html
@@ -8,6 +8,76 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+<div>
+  <!-- Button (Inline) -->
+  <button data-ns-test="block-inline-button">Test1</button>
+  <button data-ns-test="block-inline-button">Test2</button>
+  Answer: Inline
+</div>
+
+<div>
+  <!-- Div (Block) -->
+  <div data-ns-test="block-inline-div">Test1</div>
+  <div data-ns-test="block-inline-div">Test2</div>
+  Answer: Block
+</div>
+
+<div>
+  <!-- Span (Inline) -->
+  <span data-ns-test="block-inline-span">Test1</span>
+  <span data-ns-test="block-inline-span">Test2</span>
+  Answer: Inline
+</div>
+
+<div>
+  <!-- P (Block) -->
+  <p data-ns-test="block-inline-p">Test1</p>
+  <p data-ns-test="block-inline-p">Test2</p>
+  Answer: Block
+</div>
+
+<div>
+  <!-- Input (Inline) -->
+  <input data-ns-test="block-inline-input" value="Test1" />
+  <input data-ns-test="block-inline-input" value="Test2" />
+  Answer: Inline
+</div>
+
+<div>
+  <!-- Cite (Inline) -->
+  <cite data-ns-test="block-inline-cite">Test1</cite>
+  <cite data-ns-test="block-inline-cite">Test2</cite>
+  Answer: Inline
+</div>
+
+<div>
+  <!-- Code (Inline) -->
+  <code data-ns-test="block-inline-code">Test1</code>
+  <code data-ns-test="block-inline-code">Test2</code>
+  Answer: Inline
+</div>
+
+<div>
+  <!-- H1 (Block) -->
+  <h1 data-ns-test="block-inline-h1">Test1</h1>
+  <h1 data-ns-test="block-inline-h1">Test2</h1>
+  Answer: Block
+</div>
+
+<div>
+  <!-- Sup (Inline) -->
+  <sup data-ns-test="block-inline-sup">Test1</sup>
+  <sup data-ns-test="block-inline-sup">Test2</sup>
+  Answer: Inline
+</div>
+
+<div>
+  <!-- Sub (Inline) -->
+  <sub data-ns-test="block-inline-sub">Test1</sub>
+  <sub data-ns-test="block-inline-sub">Test2</sub>
+  Answer: Inline
+</div>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
